[package]
name = "abuseipdb2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0"
chrono = "0.4"
url = "2.5"
ipnetwork = { version = "0.20", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
