[package]
name = "abuseipdb2"
version = "0.2.0"
edition = "2021"
authors = ["Vero <contact@veronoi.cc>"]
description = "A Rust library for the AbuseIPDB API v2"
repository = "https://github.com/veronoicc/abuseipdb2-rs"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0"
chrono = "0.4"
url = "2.5"
ipnetwork = { version = "0.20", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
